2002-06-06  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (generate_analyzer): 
	generate analyzer. Use prelude_analyzer_fill_infos().
	(send_heartbeat_cb): use generate_analyzer()
	(lml_emit_alert): ditto.

	* plugins/simple/ruleset/grsecurity.rules: 
	Included GRsecurity ruleset, from Brad Spengler 
	<spender@grsecurity.net>. 

	Hand modified it a little to add some missing parenthesis, 
	and change /d and /w to \d and \w respectively.

	* plugins/simple/ruleset/Makefile.am (ruleset_DATA): 
	install grsecurity.rules.

2002-06-03  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (lml_alert_init): 
	setup analyzer here; register heartbeat callback.
	(lml_emit_alert): copy global analyzer.
	(send_heartbeat_cb): new function, send an heartbeat
	message.

	* src/main.c (main): 
	call lml_alert_init() after pconfig_set, because
	lml_alert_init now call libprelude function.

	* src/lml-alert.c (send_heartbeat_cb): 
	new function, send an heartbeat.
	(lml_alert_init): 

2002-05-31  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	format the syslog timestamp. 

	(format_syslog_header): 
	don't show parsing error... We parse file that don't have the
	syslog format...

	We use strptime() in order to do that, combined with localtime()
	to get missing information, and mktime() to convert back to a
	timeval.

2002-05-31  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/simple/ruleset/ipfw.rules: updated to use new SimpleMod
	capabilities.

2002-05-30  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/simple.c
	remove a debuging printf() in the changelog (suggested by yoann)

2002-05-30  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (lml_emit_alert):
	include string.h for strlen()... Thanks to 
	Razvan Cosma (razvan.cosma@catv.telemach.ro) for pointing this out.
	
	* plugins/pax/pax.c (pax_log_processing): 
	* plugins/debug/debug.c (debug_run): 