@@ -100,6 +100,7 @@ include = cisco.rules;
 include = zyxel.rules;
 include = ipfw.rules;
 include = netfilter.rules;
+include = grsecurity.rules;
 
 regex=session opened for user root; class.name=Root login; impact.completion = succeeded; impact.type = admin; impact.severity = medium;
 
